fix: add typed layout-load diagnostics and error handling
Introduce DockLayoutLoadException with JSON-path context for load failures.

Make DockLayoutSerializer throw precise typed errors instead of printing to System.out/System.err.

Validate SnapFX layouts before applying them so invalid payloads do not partially mutate state.

Show detailed layout-load errors in MainDemo and log failures through System.Logger.

Add regression tests for blank input, malformed JSON, missing fields, invalid tab selection, and load failure behavior.

Update README/ARCHITECTURE/STATUS/DONE/ROADMAP/CHANGELOG for the new load-failure contract and test totals.